--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,7 +3,7 @@ seeds = false
 skip-lint = false
 
 [programs.devnet]
-# solana_nft_anchor = "<UPDATE HERE>"
+# solana_nft_anchor = "6zJzsNsvn1udjNoCJ5sorUzkRBaFBq9Cnv4HcNwQAFxA>"
 
 [registry]
 url = "https://api.apr.dev"
